--- a/grid.css
+++ b/grid.css
@@ -126,3 +126,50 @@ img {
   grid-auto-flow: row;
   grid-auto-rows: 200px;
 }
+
+.grid-flow-dense{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  grid-template-rows: repeat(4,150px);
+  grid-auto-flow: row dense;
+}
+
+.grid-flow-dense .item:nth-child(9){
+  color: cyan;
+  grid-row: span 3;
+  grid-column: span 3;
+}
+
+.grid-layers{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(4,1fr);
+}
+
+.grid-layers .item:nth-child(1){
+  background-color: yellow;
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.grid-layers .item:nth-child(2){
+  background-color: blue;
+  grid-column: 3/5;
+  grid-row: 1/3;
+}
+
+.grid-layers .item:nth-child(3){
+  background-color: green;
+  grid-column: 1/3;
+  grid-row: 3/5;
+}
+.grid-layers .item:nth-child(4){
+  background-color: red;
+  grid-column: 3/5;
+  grid-row: 3/5;
+}
+.grid-layers .item:nth-child(5){
+  background-color: cyan;
+  grid-column: 2/4;
+  grid-row: 2/4;
+}
